feat(promotion): add api
