# docs/swagger.yaml
@@ -62,6 +62,71 @@ definitions:
       yieldPercentage:
         type: number
     type: object
+  github_com_hifat_mallow-sale-api_internal_promotion.PromotionTypeRequest:
+    properties:
+      code:
+        description: DISCOUNT, PAIR, FORCE_PRICE, OTHER
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    required:
+    - code
+    - name
+    type: object
+  github_com_hifat_mallow-sale-api_internal_promotion.PromotionTypeResponse:
+    properties:
+      code:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  github_com_hifat_mallow-sale-api_internal_promotion.Request:
+    properties:
+      detail:
+        type: string
+      discount:
+        type: number
+      name:
+        type: string
+      price:
+        type: number
+      products:
+        items:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_recipe.Request'
+        type: array
+      type:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.PromotionTypeRequest'
+    required:
+    - name
+    - type
+    type: object
+  github_com_hifat_mallow-sale-api_internal_promotion.Response:
+    properties:
+      createdAt:
+        type: string
+      detail:
+        type: string
+      discount:
+        type: number
+      id:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      products:
+        items:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_recipe.Response'
+        type: array
+      type:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.PromotionTypeResponse'
+      updatedAt:
+        type: string
+    type: object
   github_com_hifat_mallow-sale-api_internal_recipe.IngredientPrototype:
     properties:
       inventory:
@@ -267,6 +332,16 @@ definitions:
       item:
         $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_inventory.Response'
     type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_promotion_Request:
+    properties:
+      item:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.Request'
+    type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_promotion_Response:
+    properties:
+      item:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.Response'
+    type: object
   github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_recipe_Request:
     properties:
       item:
@@ -302,6 +377,15 @@ definitions:
       items:
         items:
           $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_inventory.Response'
+        type: array
+      meta:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.MetaResponse'
+    type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.ResponseItems-github_com_hifat_mallow-sale-api_internal_promotion_Response:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.Response'
         type: array
       meta:
         $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.MetaResponse'
@@ -525,6 +609,179 @@ paths:
       summary: Update Inventory by ID
       tags:
       - inventory
+  /promotions:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: fields
+        type: string
+      - default: 10
+        in: query
+        name: limit
+        type: integer
+      - default: desc
+        in: query
+        name: order
+        type: string
+      - default: 1
+        in: query
+        name: page
+        type: integer
+      - in: query
+        name: search
+        type: string
+      - default: createdAt
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItems-github_com_hifat_mallow-sale-api_internal_promotion_Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Find Promotions
+      tags:
+      - promotion
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Created promotion data
+        in: body
+        name: promotion
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.Request'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_promotion_Request'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Create Promotion
+      tags:
+      - promotion
+  /promotions/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Promotion ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.SuccessResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Delete Promotion by ID
+      tags:
+      - promotion
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: promotionID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_promotion_Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Find Promotion by ID
+      tags:
+      - promotion
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Promotion ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated promotion data
+        in: body
+        name: promotion
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_promotion.Request'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_promotion_Request'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Update Promotion by ID
+      tags:
+      - promotion
   /recipes:
     get:
       consumes:
